--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Roboto+Mono:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Roboto+Mono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link
@@ -22,9 +22,9 @@
   <body>
     <footer>
       <aside>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto facilis
-          repellendus cumque repudiandae.
+        <p class="footer-aside-text">
+          Lorem ipsum dolor sit elit. Iusto facilis repellendus cumque
+          repudiandae dolor sit elit facilis repellend.
         </p>
         <div class="social-links">
           <a href="#">
@@ -64,7 +64,7 @@
       </section>
 
       <section class="section-company">
-        <h3 class="footer-subheading">SHOP</h3>
+        <h3 class="footer-subheading">COMPANY</h3>
         <ul class="footer-list">
           <a class="footer-list-item-link" href="#">
             <li class="footer-list-item">Login</li>
@@ -73,7 +73,7 @@
             <li class="footer-list-item">Register</li>
           </a>
           <a class="footer-list-item-link" href="#">
-            <li class="footer-list-item">wishlist</li>
+            <li class="footer-list-item">Wishlist</li>
           </a>
           <a class="footer-list-item-link" href="#">
             <li class="footer-list-item">Our Products</li>
@@ -86,17 +86,20 @@
         <ul class="footer-list">
           <a class="footer-list-item-link" href="#">
             <li class="footer-list-item">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-              facilis repellendus cumque repudiandae.
+              Lorem ipsum dolor sit amet dolor sit elit dolor sit elit dolor sit
+              Iusto facilis repee.
             </li>
           </a>
         </ul>
-        <input
-          type="email"
-          name="e-mail"
-          placeholder="Enter your email address"
-        />
-        <ion-icon class="social-icon" name="mail-outline"></ion-icon>
+        <div class="input-container">
+          <input
+            class="newsletter-input"
+            type="email"
+            name="e-mail"
+            placeholder="Enter your email address"
+          />
+          <ion-icon class="input-icon social-icon" name="mail-outline"></ion-icon>
+        </div>
       </section>
     </footer>
 
